<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.abovepostnataldepression.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="788dp"
        android:layout_height="64dp"
        android:background="#d9a2f1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-1dp"
        android:layout_marginLeft="-1dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:layout_width="55dp"
        android:layout_height = "38dp"
        android:text="@string/textView_OR"
        android:id="@+id/textView_OR"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor = "#000"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_with_facebook"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/signup_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_button_facebook"
        android:text="@string/signup_with_facebook"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signup_with_google"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/signup_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_button_google"
        android:text="@string/signup_with_google"
        android:layout_gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/signup_with_facebook"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <EditText
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:id = "@+id/AbovePNDUsername"
        android:hint = "Enter Name"
        android:textColorHighlight = "#d9a2f1"
        android:textColorHint = "#f0edf2"
        android:layout_below="@+id/textView_OR"
        app:layout_constraintTop_toBottomOf="@+id/textView_OR"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="-23dp" />

    <EditText
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:id = "@+id/AbovePNDPassword"
        android:inputType="textPassword"
        android:hint = "Password"
        android:textColorHighlight = "#d9a2f1"
        android:textColorHint = "#f0edf2"
        android:layout_below="@+id/textView_OR"
        app:layout_constraintTop_toBottomOf="@+id/AbovePNDUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancel_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/TVHaveAcct" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toRightOf="@+id/login_button"
        android:layout_gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/TVHaveAcct"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Forgot?"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/AbovePNDPassword" />

    <TextView
        android:id="@+id/TVHaveAcct"
        android:layout_width="153dp"
        android:layout_height="22dp"
        android:text="Don't have an account?"
        android:layout_marginLeft="201dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/TVSignUp"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onClick"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintLeft_toRightOf="@+id/TVHaveAcct"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

</android.support.constraint.ConstraintLayout>
